# nocy-wallet-sidecar

./: .dockerignore  .gitignore  API.md  AUDIT.md  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/: 20241221_001_create_nocy_sidecar_schema.down.sql  20241221_001_create_nocy_sidecar_schema.sql  20241221_002_create_session_unshielded_address.down.sql  20241221_002_create_session_unshielded_address.sql  20241221_003_create_zswap_input_nullifiers.down.sql  20241221_003_create_zswap_input_nullifiers.sql  20241221_004_create_block_max_regular_tx.down.sql  20241221_004_create_block_max_regular_tx.sql  20241221_005_create_nullifier_cache_marker.down.sql  20241221_005_create_nullifier_cache_marker.sql  20241221_006_add_nullifier_streaming_preference.down.sql  20241221_006_add_nullifier_streaming_preference.sql  20241221_007_drop_nullifier_cache_tables.down.sql  20241221_007_drop_nullifier_cache_tables.sql  20241221_008_create_collapsed_merkle_cache.down.sql  20241221_008_create_collapsed_merkle_cache.sql  20241221_009_add_upstream_session_id.down.sql  20241221_009_add_upstream_session_id.sql
src/: config.rs  db.rs  error.rs  feed.rs  keepalive.rs  ledger_state_store.rs  lib.rs  main.rs  merkle_readiness.rs  metrics.rs  schema.rs  sequence.rs  snapshot.rs  upstream.rs
src/routes/: feed.rs  mod.rs  session.rs  status.rs  subscribe.rs  zswap.rs
