[package]
name = "nocy-wallet-feed"
version = "0.1.0"
edition = "2021"
description = "Unified wallet feed sidecar service for Midnight Network"
license = "MIT"
repository = "https://github.com/Nocy-io/nocy-wallet-sidecar"
readme = "README.md"

[lib]
name = "nocy_wallet_feed"
path = "src/lib.rs"

[[bin]]
name = "nocy-wallet-feed"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }

# Request IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bech32 = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid"] }

# NATS messaging
async-nats = "0.38"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Streams
futures = "0.3"
tokio-stream = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Random number generation (for viewing key generation and server secret)
rand = "0.8"

# Cryptographic hashing for session ID generation
blake3 = "1"

# Ledger state decoding + merkle update generation
# Using git dependency from midnight-ledger monorepo
midnight-ledger = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-6.1.0-alpha.6", package = "midnight-ledger" }
midnight-serialize = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-6.1.0-alpha.6", package = "midnight-serialize" }
midnight-storage = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-6.1.0-alpha.6", package = "midnight-storage" }
midnight-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-6.1.0-alpha.6", package = "midnight-transient-crypto" }

[dev-dependencies]
tokio-test = "0.4"
# SSE testing
reqwest-eventsource = "0.6"
# Test timeout utilities
tokio-util = { version = "0.7", features = ["time"] }
